# ChessCheck.rs

./: Cargo.toml  game.txt  run.sh
public/: index.html
src/: board.rs  game.rs  lib.rs  main.rs  moves.rs  muve.rs  piece.rs  squares.rs  ui.rs
